convert theme.vim -> theme.lua

--- a/programs/waybar/waybar-nord.css
+++ b/programs/waybar/waybar-nord.css
@@ -59,7 +59,7 @@
 
 /* The whole bar */
 #waybar {
-  background: transparent;
+  background: @dark;
   color: @light;
   font-family: PragmataPro, Iosevka, FiraCode, Noto Sans;
   font-size: 10pt;
@@ -189,55 +189,55 @@
 }
 
 #custom-arrow1 {
-  font-size: 18px;
+  font-size: 19px;
   color: @sound;
   background: transparent;
 }
 
 #custom-arrow2 {
-  font-size: 10px;
+  font-size: 12px;
   color: @arrow;
   background: @sound;
 }
 
 #custom-arrow3 {
-  font-size: 18px;
+  font-size: 19px;
   color: @memory;
   background: @network;
 }
 
 #custom-arrow4 {
-  font-size: 10px;
+  font-size: 12px;
   color: @arrow;
   background: @memory;
 }
 
 #custom-arrow5 {
-  font-size: 18px;
+  font-size: 19px;
   color: @temp;
   background: @cpu;
 }
 
 #custom-arrow6 {
-  font-size: 10px;
+  font-size: 12px;
   color: @arrow;
   background: @temp;
 }
 
 #custom-arrow7 {
-  font-size: 18px;
+  font-size: 19px;
   color: @date;
   background: @battery;
 }
 
 #custom-arrow8 {
-  font-size: 10px;
+  font-size: 12px;
   color: @arrow;
   background: @date;
 }
 
 #custom-arrow9 {
-  font-size: 18px;
+  font-size: 19px;
   color: @workspaces;
   background: transparent;
 }
